gl33-master/src/test/deca/context/invalid/other/declaration_meme_nom_float_string.deca
// Invalid
// Déclaration des variables de même nom (float et string)


{
   float a;
   String a;
}
